hphp/test/zend/good/ext/mcrypt/tests/bug49738.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("mcrypt")) print "skip";
}
