hphp/test/zend/bad/ext/mcrypt/tests/bug62102_rfc2144.php.skipif
<?php extension_loaded('mcrypt') OR print 'skip'; ?>